--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "ipc-promise": "^0.1.1",
     "keymirror": "^0.1.1",
     "object-assign": "^2.1.1",
-    "radium": "^0.12.2",
     "react": "^0.13.3",
     "thunkify": "^2.1.2"
   },
@@ -35,6 +34,7 @@
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
     "coffee-script": "^1.9.3",
+    "css-loader": "~0.14.5",
     "electron-packager": "^4.1.3",
     "electron-prebuilt": "^0.27.3",
     "eslint": "^0.22.1",
@@ -51,7 +51,10 @@
     "gulp-sass": "^2.0.1",
     "gulp-watch": "^4.2.4",
     "node-libs-browser": "^0.5.2",
+    "node-sass": "^3.2.0",
     "rimraf": "^2.4.0",
+    "sass-loader": "^1.0.2",
+    "style-loader": "^0.12.3",
     "uglify-save-license": "^0.4.1",
     "url-loader": "^0.5.6",
     "webpack": "git://github.com/webpack/webpack.git#66df34688ebf8ec4006dfd790b5b52a24bcd8b5a"
