--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "style-loader": "^0.12.3",
     "uglify-save-license": "^0.4.1",
     "url-loader": "^0.5.6",
-    "webpack": "git://github.com/webpack/webpack.git#66df34688ebf8ec4006dfd790b5b52a24bcd8b5a"
+    "webpack": "^1.10.1"
   },
   "engines": {
     "node": "^2.3.1",
