--- a/package.json
+++ b/package.json
@@ -19,20 +19,18 @@
     "zip-win32": "(cd ./releases && zip -ry ./minify-image-win-x86_64.zip ./minify-image-win-x86_64)"
   },
   "dependencies": {
-    "co": "^4.5.4",
     "debug": "^2.2.0",
     "flux": "^2.0.3",
     "gulp-rename": "^1.2.2",
     "imagemin": "^3.2.0",
     "ipc-promise": "^0.1.1",
     "keymirror": "^0.1.1",
-    "object-assign": "^2.1.1",
-    "react": "^0.13.3",
-    "thunkify": "^2.1.2"
+    "react": "^0.13.3"
   },
   "devDependencies": {
     "babel-core": "^5.5.8",
     "babel-loader": "^5.1.4",
+    "co": "^4.5.4",
     "coffee-script": "^1.9.3",
     "css-loader": "~0.14.5",
     "electron-packager": "^4.1.3",
@@ -52,9 +50,11 @@
     "gulp-watch": "^4.2.4",
     "node-libs-browser": "^0.5.2",
     "node-sass": "^3.2.0",
+    "object-assign": "^2.1.1",
     "rimraf": "^2.4.0",
     "sass-loader": "^1.0.2",
     "style-loader": "^0.12.3",
+    "thunkify": "^2.1.2",
     "uglify-save-license": "^0.4.1",
     "url-loader": "^0.5.6",
     "webpack": "^1.10.1"
