--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "object-assign": "^2.1.1",
     "rimraf": "^2.4.0",
     "sass-loader": "^1.0.2",
+    "source-map-support": "^0.3.2",
     "style-loader": "^0.12.3",
     "thunkify": "^2.1.2",
     "uglify-save-license": "^0.4.1",
